engine/baml/baml/tests/validation_files/class/unknown_type.baml
class InterfaceTwo {
  interface string
  prop2 Bar
}




// error: Type `Bar` does not exist.
//   -->  /Users/vbv/repos/gloo-lang/engine/baml/baml/tests/validation_files/class/unknown_type.baml:3
//    | 
//  2 |   interface string
//  3 |   prop2 Bar
//    | 
